<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".94" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|end"
            android:src="@drawable/logo"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintStart_toStartOf="@id/guideStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/label_moviez"
            android:textSize="@dimen/font_size_ultimate_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageLogo"
            app:layout_constraintEnd_toEndOf="@id/guideEnd"
            app:layout_constraintStart_toEndOf="@id/imageLogo"
            app:layout_constraintTop_toTopOf="@id/imageLogo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/info_nata_movie_nata_salep"
            android:textSize="@dimen/font_size_large"
            app:layout_constraintEnd_toEndOf="@id/textTitle"
            app:layout_constraintStart_toStartOf="@id/textTitle"
            app:layout_constraintTop_toBottomOf="@id/textTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/label_username"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
            app:startIconDrawable="@drawable/ic_outline_person_24_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="asdfghjkllqwertyuiopzxcvbnmASDFGHJKLZXCVBNMQWERTYUIOP1234567890"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsername"
            app:startIconDrawable="@drawable/ic_outline_lock_24_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="asdfghjkllqwertyuiopzxcvbnmASDFGHJKLZXCVBNMQWERTYUIOP1234567890#@^*)(!-.?][_~;:$%+="
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_in"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideMiddle"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

